[tool.poetry]
name = "qaoa_maxcut"
version = "0.1.0"
description = "MaxCut problem by QAOA"
authors = ["Alexander Kirilin <adkirilin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cirq = "*"
optuna = "*"
notebook = "^6.2.0"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
